# kanji-clask-ai

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  draw.html  drawing-app.py  gpu.py  index.html  index.py  pyproject.toml  trained_model.keras  training_history.json
tfjs_model/: model.json
