[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["hoando <hoando.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "2.15.0"

tensorflow-intel = { version = "^2.15.0", platform = "win32" }
tensorflow-io-gcs-filesystem = "0.31.0"
pillow = "^11.1.0"
scipy = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
